--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
   </div>
 
   <footer>
-    © 2025 Diário Oficial - PMERJ-RP <br>
+    © 2025 Diário Oficial - PMERJ-Vital <br>
     Servir e Proteger
   </footer>
 
