--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
         <p>Art. 2º – A presente promoção produz efeitos a partir da data de publicação desta Portaria, com as devidas anotações nos assentamentos funcionais e demais registros oficiais. <br><br>
            Art. 3º – Publique-se, registre-se e cumpra-se.</p>
            <br>
-           <p><strong>Assinatura:</strong> Comandante-Geral PM Diogo Martins Azevedo da PMERJ</p>
-           <p> <p><strong>Assinatura:</strong> Major PM Noah VeraCruz da PMERJ</p></p>
+          <p><strong>Assinatura:</strong> Coronel Diogo Martins Azevedo, Comandante-Geral da PMERJ-Vital</p>
+        <p><strong>Assinatura:</strong> Major PM Noah VeraCruz, Corregedor-Geral da PMERJ-Vital</p>
       </div>
     </div>
 
