--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+
+  <link rel="icon" type="image/png" href="favicon.png">
   <meta charset="UTF-8" />
   <title>Diário Oficial do Estado do Rio de Janeiro - Vital RP</title>
   <style>
