--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
         <p><strong>DIÁRIO OFICIAL – PUBLICAÇÃO OFICIAL</strong><br>
           <strong>ASSUNTO:</strong> Abertura de edital para ingresso na Polícia Militar do Estado do Rio de Janeiro<br>
           Rio de Janeiro, 14 de junho de 2025
+          
         </p>
         <br><br>
         <p style="text-align: center;"><strong>DECISÃO¹</strong></p>
@@ -203,8 +204,8 @@
           <li>LipeDEV<br><br></li>
           </ul>
           Art. 2º - Publique-se, registre-se e cumpra-se.</p>
-          <br><br>
-
+          <br>
+          <strong>Edital Nº:</strong> 01/2025<br><br>
           <br><br><p style="text-align: center;"><u>Diogo Martins Azevedo</u><br>
             Comandante-Geral da PMERJ
           </p>
@@ -260,7 +261,9 @@
           <li>LipeDEV<br><br></li>
           </ul>
           Art. 2º - Publique-se, registre-se e cumpra-se.</p>
-          <br><br>
+          
+          <br>
+          <strong>Edital Nº:</strong> 02/2025<br><br>
 
           <br><br><p style="text-align: center;"><u>Diogo Martins Azevedo</u><br>
             Comandante-Geral da PMERJ
