--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/png" href="favicon.png">
 
   <meta charset="UTF-8" />
-  <title>Diário Oficial do Estado do Rio de Janeiro - Vital RP</title>
+  <title>Portal PMERJ - Diário Oficial</title>
   <style>
     body {
       font-family: 'Georgia', serif;
